@@ -18,6 +18,7 @@
   <properties>
     <java.version>21</java.version>
     <testcontainers.version>1.21.4</testcontainers.version>
+    <mockito.version>5.14.2</mockito.version>
   </properties>
 
   <dependencies>
@@ -89,10 +90,42 @@
       <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.8.1</version>
+        <executions>
+          <execution>
+            <id>copy-mockito-agent</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.mockito</groupId>
+                  <artifactId>mockito-core</artifactId>
+                  <version>${mockito.version}</version>
+                  <outputDirectory>${project.build.directory}/agents</outputDirectory>
+                  <destFileName>mockito-core.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -128,8 +161,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>-javaagent:${project.build.directory}/agents/mockito-core.jar -XX:+EnableDynamicAgentLoading</argLine>
           <excludes>
-            <exclude>**/*IntegrationTest.java</exclude>
+            <exclude>**/*IT.java</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -146,9 +180,10 @@
           </execution>
         </executions>
         <configuration>
+          <argLine>-javaagent:${project.build.directory}/agents/mockito-core.jar -XX:+EnableDynamicAgentLoading</argLine>
           <testSourceDirectory>src/integration-test/java</testSourceDirectory>
           <includes>
-            <include>**/*IntegrationTest.java</include>
+            <include>**/*IT.java</include>
           </includes>
         </configuration>
       </plugin>
